--- a/src/gallium/auxiliary/Makefile.sources
+++ b/src/gallium/auxiliary/Makefile.sources
@@ -315,6 +315,7 @@ C_SOURCES := \
 NIR_SOURCES := \
 	nir/tgsi_to_nir.c \
 	nir/tgsi_to_nir.h \
+	nir/nir_to_tgsi.c \
 	nir/nir_draw_helpers.c \
 	nir/nir_draw_helpers.h
 
