--- a/src/gallium/auxiliary/Makefile.sources
+++ b/src/gallium/auxiliary/Makefile.sources
@@ -105,6 +105,8 @@ C_SOURCES := \
 	indices/u_indices_priv.h \
 	indices/u_primconvert.c \
 	indices/u_primconvert.h \
+	nir/nir_to_tgsi.c \
+	nir/nir_to_tgsi.h \
 	os/os_mman.h \
 	os/os_process.c \
 	os/os_process.h \
