d3d12: Add glon12 target which only includes d3d12 driver
This driver has no WGL or GL entrypoints, only the ones required by the
driver-loader.

Reviewed-by: Charmaine Lee <charmainel@vmware.com>
Reviewed-by: Erik Faye-Lund <erik.faye-lund@collabora.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7535>

--- a/src/gallium/meson.build
+++ b/src/gallium/meson.build
@@ -218,6 +218,9 @@ endif
 if with_platform_windows
   subdir('frontends/wgl')
   subdir('targets/libgl-gdi')
+  if with_gallium_d3d12
+    subdir('targets/libgl-d3d12')
+  endif
 endif
 if with_tests
   subdir('targets/graw-null')
