gitlab-ci: store build-artifacts from building mesa
GitLab CI doesn't allow us to store artifacts from outside the
build-directory, so let's create an install-directory and install there
instead.

To do this properly, we need to expand a variable inside the
command-line, so we need to change to a double-quoted string.

Reviewed-by: Daniel Stone <daniels@collabora.com>
Reviewed-by: Eric Anholt <eric@anholt.net>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7857>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -805,6 +805,9 @@ meson-windows-vs2019:
   stage: meson-misc
   script:
     - . .\.gitlab-ci\windows\mesa_build.ps1
+  artifacts:
+    paths:
+      - _install/
 
 scons-win64:
   extends: .scons-build
