--- a/src/gallium/drivers/radeonsi/Makefile.sources
+++ b/src/gallium/drivers/radeonsi/Makefile.sources
@@ -39,7 +39,7 @@ C_SOURCES := \
 	si_shaderlib_tgsi.c \
 	si_state.c \
 	si_state_binning.c \
-	si_state_draw.c \
+	si_state_draw.cpp \
 	si_state_msaa.c \
 	si_state_shaders.c \
 	si_state_streamout.c \
