driconf: disable GLX_OML_swap_method by default on Brink
Brink makes use of the WGL-equivalent extension, and Wine translates
that to GLX_OML_swap_method. However, Mesa does not expose the exchange
swap method, which is what Wine is looking for.

Not exposing the extension fixes everything, so let's keep things
simple!

Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/106
Tested-by: Gregor Münch <gr.muench_at_gmail.com>
Reviewed-by: Adam Jackson <ajax@redhat.com>
Reviewed-by: Ian Romanick <ian.d.romanick@intel.com>
Signed-off-by: Martin Peres <martin.peres@mupuf.org>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7212>

--- a/src/util/00-mesa-defaults.conf
+++ b/src/util/00-mesa-defaults.conf
@@ -587,6 +587,10 @@ TODO: document the other workarounds.
             <option name="vk_wsi_force_bgra8_unorm_first" value="true" />
         </application>
 
+        <application name="Brink" executable="brink.exe">
+            <option name="glx_extension_override" value="-GLX_OML_swap_method" />
+        </application>
+
         <!-- Gallium Nine workarounds: -->
         <application name="Rayman Legends" executable="Rayman Legends.exe">
             <option name="dynamic_texture_workaround" value="true" />
