driconf: allow higher compat version for Brink
This fixes the game on mesa classic drivers that still expose OpenGL
3.0 for compatibility profiles.

Suggested-by: Timothy Arceri <tarceri@itsqueeze.com>
Reviewed-by: Adam Jackson <ajax@redhat.com>
Reviewed-by: Ian Romanick <ian.d.romanick@intel.com>
Signed-off-by: Martin Peres <martin.peres@mupuf.org>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7212>

--- a/src/util/00-mesa-defaults.conf
+++ b/src/util/00-mesa-defaults.conf
@@ -589,6 +589,7 @@ TODO: document the other workarounds.
 
         <application name="Brink" executable="brink.exe">
             <option name="glx_extension_override" value="-GLX_OML_swap_method" />
+            <option name="allow_higher_compat_version" value="true" />
         </application>
 
         <!-- Gallium Nine workarounds: -->
