--- a/src/util/00-mesa-defaults.conf
+++ b/src/util/00-mesa-defaults.conf
@@ -619,13 +619,10 @@ TODO: document the other workarounds.
     <!-- vmwgfx doesn't like full buffer swaps and can't sync to vertical retraces.-->
     <device driver="vmwgfx">
         <application name="gnome-shell" executable="gnome-shell">
-            <option name="glx_disable_ext_buffer_age" value="true" />
-            <option name="glx_disable_oml_sync_control" value="true" />
-            <option name="glx_disable_sgi_video_sync" value="true" />
+            <option name="glx_extension_override" value="-GLX_EXT_buffer_age -GLX_OML_sync_control -GLX_SGI_video_sync" />
         </application>
         <application name="Compiz" executable="Compiz">
-            <option name="glx_disable_ext_buffer_age" value="true" />
-            <option name="glx_disable_oml_sync_control" value="true" />
+            <option name="glx_extension_override" value="-GLX_EXT_buffer_age -GLX_OML_sync_control" />
         </application>
     </device>
     <device driver="radeonsi">
