android: util,ac,aco,radv: Cross-platform memstream API
Fixes the following building errors:

external/mesa/src/amd/common/ac_debug.c:589:
error: undefined reference to 'u_memstream_open'

external/mesa/src/amd/common/ac_debug.c:593:
error: undefined reference to 'u_memstream_close'

Fixes: af8d488ea5e1 ("util,ac,aco,radv: Cross-platform memstream API")
Signed-off-by: Mauro Rossi <issor.oruam@gmail.com>
Reviewed-by: Bas Nieuwenhuizen <bas@basnieuwenhuizen.nl>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7267>

--- a/src/util/Makefile.sources
+++ b/src/util/Makefile.sources
@@ -59,6 +59,8 @@ MESA_UTIL_FILES := \
 	log.c \
 	log.h \
 	macros.h \
+	memstream.c \
+	memstream.h \
 	mesa-sha1.c \
 	mesa-sha1.h \
 	os_time.c \
