ci: disable check commits job for now
This job currently disallows reasonably long commit messages (for example,
CTS test names).

Signed-off-by: Rhys Perry <pendingchaos02@gmail.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7161>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -525,7 +525,7 @@ check mr:
   script:
     - ci-fairy check-merge-request --require-allow-collaboration --junit-xml=check-merge-request.xml
 
-check commits:
+.check commits:
   extends: .sanity-check
   rules:
     - if: *is-pre-merge
