anv: fix a build race between generating a header and using it
anv_batch_chain.c includes genX_bits.h but doesn't ensure it gets
generated first. This causes build failures, as observed here:
https://autobuilder.yoctoproject.org/typhoon/#/builders/86/builds/1501/steps/8/logs/step2d

Reviewed-by: Tapani Pälli <tapani.palli@intel.com>
Signed-off-by: Alexander Kanavin <alex.kanavin@gmail.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7412>

--- a/src/intel/vulkan/meson.build
+++ b/src/intel/vulkan/meson.build
@@ -131,6 +131,7 @@ libanv_files = files(
 anv_deps = [
   dep_libdrm,
   dep_valgrind,
+  idep_genxml,
   idep_nir_headers,
   idep_vulkan_util_headers,
 ]
