--- a/.gitlab-ci/x86_64.config
+++ b/.gitlab-ci/x86_64.config
@@ -52,8 +52,8 @@ CONFIG_ACPI_VIDEO=y
 CONFIG_X86_AMD_FREQ_SENSITIVITY=y
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_AMD=y
-CONFIG_DRM_AMDGPU=y
-CONFIG_DRM_AMDGPU_SI=y
+CONFIG_DRM_AMDGPU=m
+CONFIG_DRM_AMDGPU_SI=m
 CONFIG_DRM_AMD_ACP=n
 CONFIG_ACPI_WMI=y
 CONFIG_MXM_WMI=y
