driconf: add allow_incorrect_primitive_id option
And enable it for SPECviewperf.

Reviewed-by: Marek Olšák <marek.olsak@amd.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7078>

--- a/src/util/00-mesa-defaults.conf
+++ b/src/util/00-mesa-defaults.conf
@@ -292,6 +292,8 @@ TODO: document the other workarounds.
             <option name="force_gl_vendor" value="NVIDIA Corporation" />
             <!-- creo-02 doesn't enable GL_EXT_shader_image_load_store in GLSL -->
             <option name="force_glsl_extensions_warn" value="true" />
+            <!-- Enable draw merging inside display list for snx-03 -->
+            <option name="allow_incorrect_primitive_id" value="true" />
         </application>
 
         <!-- The GL thread allowlist is below, workarounds are above.
