--- a/src/panfrost/util/meson.build
+++ b/src/panfrost/util/meson.build
@@ -28,6 +28,7 @@ libpanfrost_util_files = files(
   'pan_ir.h',
   'pan_liveness.c',
   'pan_lower_framebuffer.c',
+  'pan_lower_writeout.c',
   'pan_sysval.c',
 )
 
