clover: add all CL 3.0 API with invalid functions
These CL 2.x APIs are all part of CL3.0 but have to return
specific values to show they aren't supported.

Reviewed-by: Karol Herbst <kherbst@redhat.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7642>

--- a/src/gallium/frontends/clover/meson.build
+++ b/src/gallium/frontends/clover/meson.build
@@ -100,6 +100,7 @@ clover_files = files(
   'api/dispatch.hpp',
   'api/event.cpp',
   'api/interop.cpp',
+  'api/invalid.cpp',
   'api/kernel.cpp',
   'api/memory.cpp',
   'api/platform.cpp',
