ci: add testing for VC4 drivers (Raspberry Pi 3)
This tests OpenGL ES 2.0 CTS suite with VC4 drivers, through baremetal
Raspberry Pi 3 devices.

The devices are connected to a switch that supports Power over Ethernet
(PoE), so the devices can be started/stopped through the switch, and
also to a host that runs the GitLab runner through serial-to-USB cables,
to monitor the devices to know when the testing finishes.

The Raspberries uses a network boot, using NFS and TFTP. For the root
filesystem, they use the one created in the armhf container. For the
kernel/modules case, this is handled externally. Currently it is using
the same kernel/modules that come with the Raspberry Pi OS. In future we
could build them in the same armhf container.

At this moment we only test armhf architecture, as this is the default
one suggested by the Raspberry Pi Foundation. In future we could also
add testing for arm64 architecture.

Finally, for the very rare ocassions where the Raspberry Pi 3 device is
booted but no data is received, it retries the testing for a second
time, powering off and on the device in the process.

v2:
 - Remove commit that exists capture devcoredump (Eric)
 - Squash remaining commits in one (Andres)

v3:
 - Add missing boot timeout check (Juan)

v4:
 - Use locks when running the PoE on/off script (Eric)
 - Use a timeout for serial read (Eric)

v5:
 - Rename stage to "raspberrypi" (Eric)
 - Bump up arm64_test tag (Eric)

v6:
 - Make serial buffer timeout optional (Juan)

Reviewed-by: Eric Anholt <eric@anholt.net>
Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7628>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ stages:
   - amd
   - arm
   - freedreno
+  - raspberrypi
   - software-renderer
   - layered-backends
   - success
@@ -383,7 +384,7 @@ arm_test-base:
     - .fdo.container-build@debian
     - .container
   variables:
-    FDO_DISTRIBUTION_TAG: &arm_test-base "2020-10-06-clang10-2"
+    FDO_DISTRIBUTION_TAG: &arm_test-base "2020-12-03-expect"
 
 .use-arm_test-base:
   extends:
@@ -401,7 +402,7 @@ arm64_test:
   extends:
     - .use-arm_test-base
   variables:
-    FDO_DISTRIBUTION_TAG: &arm64_test "2020-11-09-db410c-net"
+    FDO_DISTRIBUTION_TAG: &arm64_test "2020-12-03-expect"
 
 .use-arm64_test:
   variables:
@@ -409,6 +410,20 @@ arm64_test:
   image: "$CI_REGISTRY_IMAGE/debian/arm64_test:$TAG"
   needs:
     - arm64_test
+
+# x86 image with armhf rootfs for baremetal testing
+armhf_test:
+  extends:
+    - .use-arm_test-base
+  variables:
+    FDO_DISTRIBUTION_TAG: &armhf_test "2020-12-03-expect"
+
+.use-armhf_test:
+  variables:
+    TAG: *armhf_test
+  image: "$CI_REGISTRY_IMAGE/debian/armhf_test:$TAG"
+  needs:
+    - armhf_test
 
 # Native Windows docker builds
 #
@@ -1379,6 +1394,31 @@ arm64_a530_gles31:
   variables:
     DEQP_VER: gles31
     DEQP_FRACTION: 10
+
+vc4-rpi3-gles2:armhf:
+  extends:
+    - .baremetal-test
+    - .use-armhf_test
+    - .vc4-rules
+  parallel: 4
+  variables:
+    BARE_METAL_TEST_SCRIPT: "/install/deqp-runner.sh"
+    BM_BOOTFS: /boot/armhf
+    BM_KERNEL_MODULES: vc4
+    BM_ROOTFS: /lava-files/rootfs-armhf
+    BM_ROOTFS_EXTRA: /modules/armhf
+    DEQP_EXPECTED_FAILS: deqp-vc4-rpi3-fails.txt
+    DEQP_EXPECTED_RENDERER: VC4
+    DEQP_FLAKES: deqp-vc4-rpi3-flakes.txt
+    DEQP_SKIPS: deqp-vc4-rpi3-skips.txt
+    DEQP_VER: gles2
+  script:
+    - ./install/bare-metal/poe-powered.sh
+  needs:
+    - armhf_test
+    - meson-armhf
+  tags:
+    - igalia-rpi3
 
 # RADV CI
 .test-radv:
