--- a/.gitlab-ci/test-source-dep.yml
+++ b/.gitlab-ci/test-source-dep.yml
@@ -147,6 +147,24 @@
       when: on_success
     - when: never
 
+.vc4-rules:
+  stage: raspberrypi
+  rules:
+    - *ignore_scheduled_pipelines
+    - changes:
+        *mesa_core_file_list
+      when: on_success
+    - changes:
+        *gallium_core_file_list
+      when: on_success
+    - changes:
+      - src/broadcom/**/*
+      - src/gallium/drivers/vc4/**/*
+      - src/gallium/winsys/kmsro/**/*
+      - src/gallium/winsys/vc4/**/*
+      when: on_success
+    - when: never
+
 .lima-rules:
   stage: arm
   rules:
