clover: Use .def files for exports on Windows
v2: Move .def files to opencl target

Reviewed-by: Karol Herbst <kherbst@redhat.com>
Reviewed-by: Francisco Jerez <currojerez@riseup.net>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7680>

--- a/src/gallium/targets/opencl/meson.build
+++ b/src/gallium/targets/opencl/meson.build
@@ -93,9 +93,12 @@ else
   dep_version = null_dep
 endif
 
+ocldef = files(opencl_libname + '.def')[0]
+
 libopencl = shared_library(
   opencl_libname,
   [],
+  vs_module_defs : ocldef,
   link_args : [ld_args_gc_sections, opencl_link_args],
   link_depends : opencl_link_deps,
   link_whole : libclover,
