v3dv: Wayland WSI support
Reviewed-by: Iago Toral Quiroga <itoral@igalia.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7303>

--- a/src/broadcom/vulkan/meson.build
+++ b/src/broadcom/vulkan/meson.build
@@ -105,6 +105,13 @@ if with_platform_x11
   libv3dv_files += files('v3dv_wsi_x11.c')
 endif
 
+if with_platform_wayland
+  v3dv_deps += [dep_wayland_client, dep_wl_protocols]
+  v3dv_flags += '-DVK_USE_PLATFORM_WAYLAND_KHR'
+  libv3dv_files += files('v3dv_wsi_wayland.c')
+  libv3dv_files += [wayland_drm_client_protocol_h, wayland_drm_protocol_c]
+endif
+
 if system_has_kms_drm and not with_platform_android
  v3dv_flags += '-DVK_USE_PLATFORM_DISPLAY_KHR'
  libv3dv_files += files('v3dv_wsi_display.c')
