--- a/src/gallium/auxiliary/pipe-loader/meson.build
+++ b/src/gallium/auxiliary/pipe-loader/meson.build
@@ -72,6 +72,6 @@ libpipe_loader_dynamic = static_library(
   ],
   gnu_symbol_visibility : 'hidden',
   link_with : [libpipe_loader_links],
-  dependencies : [dep_libdrm, idep_xmlconfig],
+  dependencies : [dep_libdrm, idep_xmlconfig, idep_mesautil],
   build_by_default : false,
 )
