--- a/src/mesa/drivers/dri/swrast/meson.build
+++ b/src/mesa/drivers/dri/swrast/meson.build
@@ -23,5 +23,5 @@ libswrast_dri = static_library(
   files('swrast.c', 'swrast_priv.h'),
   gnu_symbol_visibility : 'hidden',
   include_directories : [inc_include, inc_src, inc_mapi, inc_mesa, inc_gallium, inc_gallium_aux, inc_dri_common],
-  dependencies : dep_libdrm,
+  dependencies : [dep_libdrm, idep_mesautil],
 )
