--- a/src/gallium/drivers/zink/meson.build
+++ b/src/gallium/drivers/zink/meson.build
@@ -66,7 +66,7 @@ libzink = static_library(
   [files_libzink, zink_device_info, zink_nir_algebraic_c],
   gnu_symbol_visibility : 'hidden',
   include_directories : [inc_include, inc_src, inc_mapi, inc_mesa, inc_gallium, inc_gallium_aux, inc_vulkan_wsi, inc_vulkan_util],
-  dependencies: [dep_vulkan, idep_nir_headers],
+  dependencies: [dep_vulkan, idep_nir_headers, idep_mesautil],
 )
 
 driver_zink = declare_dependency(
