--- a/src/mesa/main/tests/meson.build
+++ b/src/mesa/main/tests/meson.build
@@ -39,7 +39,7 @@ test(
     'main_test',
     [files_main_test, main_dispatch_h],
     include_directories : [inc_include, inc_src, inc_mapi, inc_mesa],
-    dependencies : [idep_gtest, dep_clock, dep_dl, dep_thread],
+    dependencies : [idep_gtest, dep_clock, dep_dl, dep_thread, idep_mesautil],
     link_with : [libmesa_classic, link_main_test],
   ),
   suite : ['mesa'],
